allocation of points

--- a/tutorial-beginner.html
+++ b/tutorial-beginner.html
@@ -136,7 +136,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">20</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -152,7 +159,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">20</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -168,7 +180,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">20</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -184,7 +201,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -196,11 +218,16 @@
 									<h3 class="text-sm text-gray-700">
 										<a href="#">
 										<span aria-hidden="true" class="absolute inset-0"></span>
-										Butterfly
+										Shuriken
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -216,7 +243,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -232,7 +264,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -248,7 +285,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -264,7 +306,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -280,7 +327,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -296,7 +348,12 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -308,11 +365,16 @@
 									<h3 class="text-sm text-gray-700">
 										<a href="#">
 										<span aria-hidden="true" class="absolute inset-0"></span>
-										Grass
+										Crane
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div class="pointsneeded">
+										<p class="text-sm font-medium text-gray-900">30</p>
+										<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+										  </svg>
+									</div>
 								</div>
 							</div>
 							
