--- a/tutorial.html
+++ b/tutorial.html
@@ -136,10 +136,12 @@
 									</h3>
 									</div>
 									<div>
-										<p class="text-sm font-medium text-gray-900">5</p>
-										<svg class="w-4 h-4 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
-											<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
-										</svg>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">50</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -156,7 +158,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">50</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -172,7 +181,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">20</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -188,7 +204,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">30</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -204,7 +227,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">50</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -220,7 +250,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">20</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -236,7 +273,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">30</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -252,7 +296,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">20</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -268,7 +319,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">20</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -284,7 +342,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">30</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -300,7 +365,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">30</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="group relative">
@@ -316,7 +388,14 @@
 										</a>
 									</h3>
 									</div>
-									<p class="text-sm font-medium text-gray-900">5 star</p>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">20</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
 								</div>
 							</div>
 							
