--- a/crane_stepbystep_11.html
+++ b/crane_stepbystep_11.html
@@ -35,7 +35,7 @@
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                     <div class="flex flex-shrink-0 items-center">
                         <a href="index.html">
-                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Your Company">
+                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="origame">
                         </a>
                     </div>
           <div class="hidden sm:ml-6 sm:block">
@@ -56,7 +56,7 @@
             <button name="dropdown-toggle" id="dropdown-toggle" class="flex rounded-full bg-gray-800 text-sm focus:outline-none border-none">
               <span class="absolute -inset-1.5"></span>
               <span class="sr-only">Open user menu</span>
-              <img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="">
+              <img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="Bobby Lee's Profile Pic'">
             </button>
             
             <!-- Add the dropdown menu with a class to control its visibility -->
@@ -147,13 +147,13 @@
     <br>
     <div class="card-group mx-auto">
       <div class="card">
-        <img src="images/crane_tutorial/34.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/34.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body" id="h5text">
           <h5 class="card-title text-center">Choose one end to be the crane's head. Fold it over in the angle you prefer and then inside reverse fold it.</h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/35.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/35.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body text-center" id="h5text">
           <h5 class="card-title">Finally, fold both of the wings down. You can decide to keep them up or all the way down.</h5>
         </div>
