--- a/crane_stepbystep_4.html
+++ b/crane_stepbystep_4.html
@@ -35,7 +35,7 @@
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                     <div class="flex flex-shrink-0 items-center">
                         <a href="index.html">
-                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Your Company">
+                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="origame">
                         </a>
                     </div>
           <div class="hidden sm:ml-6 sm:block">
@@ -147,19 +147,19 @@
     <br>
     <div class="card-group mx-auto">
       <div class="card">
-        <img src="images/crane_tutorial/13.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/13.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body" id="h5text">
           <h5 class="card-title text-center">Flip the paper back over to the other side.<br><br></h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/14.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/14.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body text-center" id="h5text">
           <h5 class="card-title">Bring the left and right corners towards you and down.<br><br></h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/15.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/15.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body text-center" id="h5text">
           <h5 class="card-title">Flatten the inner corners underneath the top section.<br><br></h5>
         </div>
