--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                     <div class="flex flex-shrink-0 items-center">
                         <a href="index.html">
-                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Your Company">
+                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="origame">
                         </a>
                     </div>
 				  <div class="hidden sm:ml-6 sm:block">
@@ -53,7 +53,7 @@
 					  <button name="dropdown-toggle" id="dropdown-toggle" class="flex rounded-full bg-gray-800 text-sm focus:outline-none border-none">
               <span class="absolute -inset-1.5"></span>
               <span class="sr-only">Open user menu</span>
-              <img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="">
+              <img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="Bobby Lee's Profile Pic'">
             </button>
             
             <!-- Add the dropdown menu with a class to control its visibility -->
@@ -90,29 +90,29 @@
 					<div class="flex items-center space-x-6 lg:space-x-8">
 					  <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
 						<div class="h-64 w-44 overflow-hidden rounded-lg sm:opacity-0 lg:opacity-100">
-						  <img src="images/origami/bluebell flower.jpg" alt="" class="h-full w-full object-cover object-center">
+						  <img src="images/origami/bluebell flower.jpg" alt="Bluebell Flower Origami" class="h-full w-full object-cover object-center">
 						</div>
 						<div class="h-64 w-44 overflow-hidden rounded-lg">
-						  <img src="images/origami/cat.jpg" alt="" class="h-full w-full object-cover object-center">
-						</div>
-					  </div>
-					  <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
-						<div class="h-64 w-44 overflow-hidden rounded-lg">
-						  <img src="images/origami/frog.jpg" alt="" class="h-full w-full object-cover object-center">
-						</div>
-						<div class="h-64 w-44 overflow-hidden rounded-lg">
-						  <img src="images/origami/ladybug.jpg" alt="" class="h-full w-full object-cover object-center">
-						</div>
-						<div class="h-64 w-44 overflow-hidden rounded-lg">
-						  <img src="images/origami/lotus.jpg" alt="" class="h-full w-full object-cover object-center">
+						  <img src="images/origami/cat.jpg" alt="Cat Origami" class="h-full w-full object-cover object-center">
 						</div>
 					  </div>
 					  <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
 						<div class="h-64 w-44 overflow-hidden rounded-lg">
-						  <img src="images/origami/tulip.jpg" alt="" class="h-full w-full object-cover object-center">
+						  <img src="images/origami/frog.jpg" alt="Frog Origami" class="h-full w-full object-cover object-center">
 						</div>
 						<div class="h-64 w-44 overflow-hidden rounded-lg">
-						  <img src="images/origami/star.jpg" alt="" class="h-full w-full object-cover object-center">
+						  <img src="images/origami/ladybug.jpg" alt="Ladybug Origami" class="h-full w-full object-cover object-center">
+						</div>
+						<div class="h-64 w-44 overflow-hidden rounded-lg">
+						  <img src="images/origami/lotus.jpg" alt="Lotus Origami" class="h-full w-full object-cover object-center">
+						</div>
+					  </div>
+					  <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
+						<div class="h-64 w-44 overflow-hidden rounded-lg">
+						  <img src="images/origami/tulip.jpg" alt="Tulip Origami" class="h-full w-full object-cover object-center">
+						</div>
+						<div class="h-64 w-44 overflow-hidden rounded-lg">
+						  <img src="images/origami/star.jpg" alt="Star Origami" class="h-full w-full object-cover object-center">
 						</div>
 					  </div>
 					</div>
