--- a/tutorial.html
+++ b/tutorial.html
@@ -34,7 +34,7 @@
 				<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
 					<div class="flex flex-shrink-0 items-center">
 						<a href="index.html">
-							<img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Your Company">
+							<img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="origame">
 						</a>
 					</div>
 					<div class="hidden sm:ml-6 sm:block">
@@ -55,7 +55,7 @@
 						<button name="dropdown-toggle" id="dropdown-toggle" class="flex rounded-full bg-gray-800 text-sm focus:outline-none border-none">
 				<span class="absolute -inset-1.5"></span>
 				<span class="sr-only">Open user menu</span>
-				<img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="">
+				<img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="Bobby Lee's Profile Pic'">
 			</button>
 			
 			<!-- Add the dropdown menu with a class to control its visibility -->
@@ -116,7 +116,6 @@
 						</div>
 					</div>
 				</div>
-
 					<div class="bg-white">
 						<div class="mx-auto max-w-auto px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
 						<!-- <h2 class="text-2xl font-bold tracking-tight text-gray-900">Customers also purchased</h2> -->
@@ -138,6 +137,29 @@
 									<div>
 										<div class="pointsneeded">
 											<p class="text-sm font-medium text-gray-900">50</p>
+											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
+											  </svg>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="group relative">
+								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+									<img src="images/origami/lotus.jpg" alt="lotus" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+								</div>
+								<div class="mt-4 flex justify-between">
+									<div>
+									<h3 class="text-sm text-gray-700">
+										<a href="lotus.html">
+										<span aria-hidden="true" class="absolute inset-0"></span>
+										Lotus Flower
+										</a>
+									</h3>
+									</div>
+									<div>
+										<div class="pointsneeded">
+											<p class="text-sm font-medium text-gray-900">30</p>
 											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
 												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
 											  </svg>
@@ -322,29 +344,6 @@
 									<div>
 										<div class="pointsneeded">
 											<p class="text-sm font-medium text-gray-900">20</p>
-											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
-												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
-											  </svg>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="group relative">
-								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/daylily.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-								</div>
-								<div class="mt-4 flex justify-between">
-									<div>
-									<h3 class="text-sm text-gray-700">
-										<a href="#">
-										<span aria-hidden="true" class="absolute inset-0"></span>
-										Daylily
-										</a>
-									</h3>
-									</div>
-									<div>
-										<div class="pointsneeded">
-											<p class="text-sm font-medium text-gray-900">30</p>
 											<svg class="w-5 h-5 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
 												<path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
 											  </svg>
