--- a/crane_stepbystep_5.html
+++ b/crane_stepbystep_5.html
@@ -35,7 +35,7 @@
         <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                     <div class="flex flex-shrink-0 items-center">
                         <a href="index.html">
-                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Your Company">
+                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="origame">
                         </a>
                     </div>
           <div class="hidden sm:ml-6 sm:block">
@@ -56,7 +56,7 @@
             <button name="dropdown-toggle" id="dropdown-toggle" class="flex rounded-full bg-gray-800 text-sm focus:outline-none border-none">
               <span class="absolute -inset-1.5"></span>
               <span class="sr-only">Open user menu</span>
-              <img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="">
+              <img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="Bobby Lee's Profile Pic'">
             </button>
             
             <!-- Add the dropdown menu with a class to control its visibility -->
@@ -147,19 +147,19 @@
     <br>
     <div class="card-group mx-auto">
       <div class="card">
-        <img src="images/crane_tutorial/16.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/16.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body" id="h5text">
           <h5 class="card-title text-center">This is now a square base, sometimes called a 'preliminary' base. <br>Now we will continue to make a bird base.</h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/17.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/17.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body text-center" id="h5text">
           <h5 class="card-title"><br>Fold the bottom right diagonal edge of the front layer over to the left to align with the central crease.<br><br></h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/18.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/18.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body text-center" id="h5text">
           <h5 class="card-title"><br><br>Do the same with the bottom left diagonal edge.<br><br></h5>
         </div>
