--- a/tutorial-beginner.html
+++ b/tutorial-beginner.html
@@ -34,7 +34,7 @@
 				<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
 					<div class="flex flex-shrink-0 items-center">
 						<a href="index.html">
-							<img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Your Company">
+							<img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="origame">
 						</a>
 					</div>
 					<div class="hidden sm:ml-6 sm:block">
@@ -55,7 +55,7 @@
 						<button name="dropdown-toggle" id="dropdown-toggle" class="flex rounded-full bg-gray-800 text-sm focus:outline-none border-none">
 				<span class="absolute -inset-1.5"></span>
 				<span class="sr-only">Open user menu</span>
-				<img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="">
+				<img class="h-16 w-16 rounded-full object-cover" src="images/profile/profilepic.jpg" alt="Bobby Lee's Profile Pic'">
 			</button>
 			
 			<!-- Add the dropdown menu with a class to control its visibility -->
